--- a/View/Home+Login/a-home.html
+++ b/View/Home+Login/a-home.html
@@ -65,12 +65,12 @@
       <h2>Find your internship right now</h2>
     </div>
 
+    <form method="GET">
       <div class="search">
-        <form>
+        
           <input class="input" type="text" name="s" placeholder="Job, skills, company...">
           <input class="input" type="text" name="s" placeholder="City, area...">
           <button type="submit" class="searchbtn"> Search <i class="fa fa-search"></i></button>
-        </form> 
       </div>
 
         <div class="filters">
@@ -99,6 +99,7 @@
               <option>1 Year</option>
             </select>
           </div>
+        </form>
   
   
 </div>
